--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Study Journey</title>
 </head>
-<body>
-    <h1 style="color: rgb(223, 134, 17);font-family: Georgia, 'Times New Roman', Times, serif;font-size: large;">My Education Journey</h1>
-    <p style="color: black;font-family: 'Times New Roman', Times, serif;font-size: medium;">I started school at the age of 2 years. At the beginning of my education, my parents had taken me to that school for daycare but I ended up learning with other students. The other students were having their end of term exams and I was also issued an exam paper. When the results came back, I was among the top students in the class and that is how I progressed to the next class and officially started my education in 2007. </p>
+<body style="background-color: rgb(27, 1, 11);">
+    <h1 style="color: rgb(16, 123, 247);font-family: Georgia, 'Times New Roman', Times, serif;font-size: large;">My Education Journey</h1>
+    <p style="color: rgb(231, 197, 3);font-family: 'Times New Roman', Times, serif;font-size: medium;">I started school at the age of 2 years. At the beginning of my education, my parents had taken me to that school for daycare but I ended up learning with other students. The other students were having their end of term exams and I was also issued an exam paper. When the results came back, I was among the top students in the class and that is how I progressed to the next class and officially started my education in 2007. </p>
 
-    <p style="color: black;font-family: 'Times New Roman', Times, serif;font-size: medium;">Since then, I have undergone primary school and secondary school and currently I am undertaking tertiary education. I completed my primary school in 2016 after studying in various schools.I graduated with a Kenya Certificate of Primary Education and 340 marks After that I joined secondary school. Since joining, I studied in the same school till I did my national exam. I finished school in 2021 due to the covid 19 pandemic that pushed me 4 months into the next year. I graduated with a Kenya Certificate of Secondary Education and an average grade of B- with 57 points.</p>
-    <h2 style="color: rgb(223, 134, 17);font-family: Georgia, 'Times New Roman', Times, serif;font-size:large">Schools Attended</h2>
-    <p style="color: black;font-family: 'Times New Roman', Times, serif;font-size: medium">From 2007 till 2025, I have been to different institutions as shown below:</p>
-    <ol>
+    <p style="color: rgb(231, 197, 3);font-family: 'Times New Roman', Times, serif;font-size: medium;">Since then, I have undergone primary school and secondary school and currently I am undertaking tertiary education. I completed my primary school in 2016 after studying in various schools.I graduated with a Kenya Certificate of Primary Education and 340 marks After that I joined secondary school. Since joining, I studied in the same school till I did my national exam. I finished school in 2021 due to the covid 19 pandemic that pushed me 4 months into the next year. I graduated with a Kenya Certificate of Secondary Education and an average grade of B- with 57 points.</p>
+    <h2 style="color: rgb(16, 123, 247);font-family: Georgia, 'Times New Roman', Times, serif;font-size:large">Schools Attended</h2>
+    <p style="color: rgb(231, 197, 3);font-family: 'Times New Roman', Times, serif;font-size: medium">From 2007 till 2025, I have been to different institutions as shown below:</p>
+    <ol style="color: rgb(231, 197, 3);">
         <li>Komothai Primary School</li>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRipJOCCKTUBNcZuhm4MCD_bzOZEcPudb26tA&s" style="width: 200px; height: 200px;">
         <li>Ruhia Rwambogo Primary School</li>
@@ -23,11 +23,11 @@
         <img src="https://africanvisionary.org/images/asset/bWFpbi9ha2lyYWNoaXgtbG9nby5wbmc=?s=34f2ebe18de16ecca3ec70f01c5b08be" style="width: 200px; height: 200px" >
     </ol>
 
-    <p style="color: black;font-family: 'Times New Roman', Times, serif;font-size: medium">Having navigated through this different stages of education background, I have formed a firm foundation and I believe that I have what it takes to navigate through AkiraChix. I hope that at the end of this journey I will be able to work in the tech field and become a problem solver. Navigate through every challenge and adapt to any working environment. Mostly I want to come up with real life solutions to real world problems and you never know, I might work in different countries for a change.</p>
+    <p style="color: rgb(231, 197, 3);font-family: 'Times New Roman', Times, serif;font-size: medium">Having navigated through this different stages of education background, I have formed a firm foundation and I believe that I have what it takes to navigate through AkiraChix. I hope that at the end of this journey I will be able to work in the tech field and become a problem solver. Navigate through every challenge and adapt to any working environment. Mostly I want to come up with real life solutions to real world problems and you never know, I might work in different countries for a change.</p>
 
-    <h3 style="color: rgb(223, 134, 17);font-family: Georgia, 'Times New Roman', Times, serif;font-size: large">Educational Achievements</h3>
-    <p style="color: black;font-family: 'Times New Roman', Times, serif;font-size: medium">Of course for every bridge you cross you have to show something for it. For all those milestones that I have crossed in various educational stages I graduated with certificates. Below is a list of some of the certificates I own from school.</p>
-    <ol>
+    <h3 style="color: rgb(16, 123, 247);font-family: Georgia, 'Times New Roman', Times, serif;font-size: large">Educational Achievements</h3>
+    <p style="color: rgb(231, 197, 3);font-family: 'Times New Roman', Times, serif;font-size: medium">Of course for every bridge you cross you have to show something for it. For all those milestones that I have crossed in various educational stages I graduated with certificates. Below is a list of some of the certificates I own from school.</p>
+    <ol style="color: rgb(231, 197, 3);">
         <li>Certificate of best performance in Lari district.</li>
         <li>Kenya Certificate of Primary Education.</li>
         <li>Kenya Certificate of Secondary Education</li>
@@ -35,6 +35,6 @@
         <li>Certificate of participation in students council</li>
     </ol>
 
-    <p style="color: black;font-family: 'Times New Roman', Times, serif;font-size: medium">As the old adage goes, education is an ocean, it has no end. This will not be the end of my learning journey but only a stage. I wish to continue with my pursuit for sucess and achieve greater milestones in life. I wish to see codehive program to the end and come out extremely good at what I will learn. We  have started off learning various fields of tech but with time I will find my stronghold and work towards perfectioning it.</p>
+    <p style="color:rgb(231, 197, 3);font-family: 'Times New Roman', Times, serif;font-size: medium">As the old adage goes, education is an ocean, it has no end. This will not be the end of my learning journey but only a stage. I wish to continue with my pursuit for sucess and achieve greater milestones in life. I wish to see codehive program to the end and come out extremely good at what I will learn. We  have started off learning various fields of tech but with time I will find my stronghold and work towards perfectioning it.</p>
 </body>
 </html>
